--- a/src/main/resources/templates/main.hbs
+++ b/src/main/resources/templates/main.hbs
@@ -10,7 +10,7 @@
 </head>
 <body>
 <h1>스프링부트로 시작하는 웹 서비스</h1>
-<h2>좀 되라 쫌!!!!!!!!!!!!!!</h2>
+<h2>자동 배포 잘 됩니까</h2>
 <div class="col-md-12">
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#savePostsModal">글 등록</button>
     <br/>
